# gbadisasm

./: .gitignore  CMakeLists.txt  Makefile  README.md  disasm.c  gbadisasm.h  main.c
src/: disasm.c  gbadisasm.h  main.c  main.cpp  util.c
